Se crea esqueleto de prueba

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-
+Port=8185
+CORSOrigins=http://localhost:3000,https://test.cesarlead.com
+DBUser=go_test_user
+DBPassword=go_test_pass
+DBHost=localhost
+DBPort=5435
+DBName=app_test
